--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         .para{
             background-color: blueviolet;
         }
+          #heading{
+            text-align: center; 
+            color: rgb(112, 4, 69);
+        }
+        #heading1{
+            text-align: center;
+            color: blue;
+        }
     </style>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -19,8 +27,8 @@
 
     <!--Inline CSS-->
     <div>
-    <h1 style="text-align: center; color: blue;">Inline - CSS</h1>
-    <h2 style="text-align: center; background-color: chocolate;">Week - 2 Task, Day - 1 CSS </h2>
+    <h1 id="heading">Inline - CSS</h1>
+    <h2 id="heading1">Week - 2 Task, Day - 1 CSS </h2>
     <p style="background-color: cornflowerblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, tempora perferendis? Architecto, quisquam? 
         Optio tempore harum excepturi sed eos vitae autem, neque in dolores laudantium dicta eius deserunt hic aperiam.</p>
         <a href="https://gwcdata.ai/"><button style="background-color: rgb(137, 192, 137); border-radius: 5px;">Explore more</button></a>
