--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
             text-align: center;
             color: blue;
         }
+        ul{
+            font-weight: 700;
+            font-style: italic;
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+        ol{
+            font-weight: 700;
+            font-style: italic;
+            margin-top: 20px;
+            margin-left: 50px;
+        }
     </style>
-    <link rel="stylesheet" href="./style.css">
 </head>
 <body style="background-color: bisque;">
 
